syntax = "proto3";

package client;
option go_package = "interface/grpc/proto/client";

import "google/protobuf/timestamp.proto";

service Service {
    rpc GetAll(FilterRequest) returns (ListClientsResponse);
    rpc Get(IdRequest) returns (ClientResponse);
    rpc Create(CreateRequest) returns (ClientResponse);
    rpc Update(UpdateRequest) returns (ClientResponse);
    rpc Delete(IdRequest) returns (ClientResponse);
    rpc Restore(IdRequest) returns (ClientResponse);
    rpc Remove(IdRequest) returns (ClientResponse);
}

message Error {
    string code = 1;
    string message = 2;
}

// structure

message Client {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    google.protobuf.Timestamp deleted_at = 5;
}

// requests

message IdRequest {
    string client_id = 1;
}

message CreateRequest {
    string name = 1;
}

message UpdateRequest {
    string client_id = 1;
    string name = 2;
}

message FilterRequest {
    string          name = 1;
    bool            deleted = 2;
    repeated string ids = 3;
}

// responses

message ClientResponse {
    Client client = 1;
    Error error = 2;
}

message ListClientsResponse {
    repeated Client clients = 1;
    Error error = 2;
}
